Create display, first run at calc logic

--- a/index.html
+++ b/index.html
@@ -9,6 +9,32 @@
     <title>Calculator</title>
 </head>
 <body>
-    
+    <div id="calculator" style="width: 400px; display: flex; flex-direction: column; 
+        border: 1px solid black; padding: 10px">
+        <div id="display" style="background-color: lightgray; font-size: 50px;
+            margin: 20px">5318008</div>
+        <div id="row1" style="display: flex; justify-content: space-around;">
+            <div id="btn">1</div>
+            <div id="btn">2</div>
+            <div id="btn">3</div>
+            <div id="btn">+</div>
+        </div>
+        <div id="row2" style="display: flex; justify-content: space-around;">
+            <div id="btn">4</div>
+            <div id="btn">5</div>
+            <div id="btn">6</div>
+            <div id="btn">-</div>
+        </div>
+        <div id="row3" style="display: flex; justify-content: space-around;">
+            <div id="btn">7</div>
+            <div id="btn">8</div>
+            <div id="btn">9</div>
+            <div id="btn">*</div>
+        </div>
+        <div id="row4" style="display: flex; justify-content: space-around;">
+            <div id="btn">0</div>
+            <div id="btn">/</div>
+        </div>
+    </div>
 </body>
 </html>
